# gpt2api_rs

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/superpowers/plans/: 2026-04-22-chatgpt-web-image-gateway.md
docs/superpowers/specs/: 2026-04-22-chatgpt-web-image-gateway-design.md
skills/gpt2api-image-request/: SKILL.md
src/: activity.rs  admin_client.rs  app.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  notifications.rs  routing.rs  scheduler.rs  service.rs  tasks.rs  usage.rs
src/accounts/: import.rs  mod.rs  refresh.rs  status_cache.rs
src/http/: admin_api.rs  health.rs  mod.rs  product_api.rs  public_api.rs
src/storage/: artifacts.rs  control.rs  events.rs  migrations.rs  mod.rs  outbox.rs
src/upstream/: chatgpt.rs  mod.rs
tests/: account_refresh.rs  admin_api.rs  admin_client.rs  cli_smoke.rs  image_task_runner.rs  import_parsers.rs  notifications.rs  outbox_events.rs  product_api.rs  product_storage.rs  proxy_storage.rs  public_api.rs  scheduler_routing.rs  service_routing.rs  storage_bootstrap.rs  upstream_image.rs
tests/fixtures/chatgpt/: conversation_sse.txt
