[package]
name = "gpt2api-rs"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = []

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.7", features = ["multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1", features = ["bundled"] }
parking_lot = "0.12"
primp = "1.2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "2.0"
tokio = { version = "1.35", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
tempfile = "3.23"
wiremock = "0.6"

[lints.rust]
missing_docs = "deny"

[lints.clippy]
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
empty_docs = "deny"
tabs_in_doc_comments = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"

[lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
missing_crate_level_docs = "deny"
private_intra_doc_links = "deny"
unescaped_backticks = "deny"
